--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -9,7 +9,7 @@ audioread>=3.0.1
 backcall==0.2.0
 bleach==4.1.0
 cachetools==5.2.0
-certifi>=2023.5.7
+certifi
 cffi==1.15.1
 chardet==4.0.0
 click==8.0.4
@@ -24,7 +24,7 @@ google-auth==2.15.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.51.1
-h5py==3.6.0
+gunicorn==20.1.0
 idna==3.4
 ipykernel==6.15.2
 ipython==8.6.0
@@ -33,28 +33,24 @@ ipywidgets
 itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
-joblib==1.1.0
 jsonschema==4.17.3
 jupyter==1.0.0
 jupyter-client==7.4.9
 jupyter-console==6.4.4
 jupyter-core==4.11.2
 jupyterlab-pygments==0.1.2
-Keras==2.11.0
-Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 librosa==0.9.2
 llvmlite==0.39.1
 Markdown==3.4.1
 MarkupSafe==2.1.1
-matplotlib>=3.6,<3.7
 mistune
 nbclient==0.6.6
 nbconvert
 nbformat==5.5.0
 nest-asyncio==1.5.4
 notebook==6.5.3
-numpy>=1.21,<1.25
+numpy==1.22
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
@@ -63,7 +59,6 @@ pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.3.0
 plotly==5.10.0
 pooch==1.6.0
 prometheus-client==0.14.1
@@ -92,11 +87,6 @@ scipy==1.9.3
 Send2Trash==1.8.0
 six==1.16.0
 SoundFile==0.10.3.post1
-tensorboard==2.11.2
-tensorboard-plugin-wit==1.8.1
-tensorflow>=2.11,<2.13
-tensorflow-estimator==2.11.0
-tensorflow-intel
 termcolor==2.2.0
 terminado==0.17.1
 testpath==0.6.0
